--- a/common_services/syndication_ear/pom.xml
+++ b/common_services/syndication_ear/pom.xml
@@ -4,18 +4,18 @@
     <parent>
         <artifactId>common_services</artifactId>
         <groupId>de.mpg.escidoc.services</groupId>
-        <version>1.0.29</version>
+        <version>1.0.30-SNAPSHOT</version>
     </parent>
     <groupId>de.mpg.escidoc.services</groupId>
     <artifactId>syndication_ear</artifactId>
-    <version>1.0.11</version>
+    <version>1.0.12-SNAPSHOT</version>
     <name>syndication_ear</name>
     <packaging>ear</packaging>
 
     <scm>
-        <connection>scm:svn:https://zim02.gwdg.de/repos/common/tags/common_services-1.0.29/syndication_ear</connection>
-        <developerConnection>scm:svn:https://zim02.gwdg.de/repos/common/tags/common_services-1.0.29/syndication_ear</developerConnection>
-        <url>https://zim02.gwdg.de/repos/common/tags/common_services-1.0.29</url>
+        <connection>scm:svn:https://zim02.gwdg.de/repos/common/trunk/common_services/syndication_ear</connection>
+        <developerConnection>scm:svn:https://zim02.gwdg.de/repos/common/trunk/common_services/syndication_ear</developerConnection>
+        <url>https://zim02.gwdg.de/repos/common/</url>
     </scm>
 
     <build>
@@ -300,47 +300,47 @@
         <dependency>
             <groupId>de.mpg.escidoc.services</groupId>
             <artifactId>framework_access</artifactId>
-            <version>1.0.30</version>
+            <version>1.0.31-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>de.mpg.escidoc.services</groupId>
             <artifactId>common_logic</artifactId>
-            <version>1.1.27</version>
+            <version>1.1.28-SNAPSHOT</version>
             <scope>test</scope>
             <type>ejb</type>
         </dependency>
         <dependency>
         	<groupId>de.mpg.escidoc.services</groupId>
         	<artifactId>search_presentation</artifactId>
-        	<version>1.0.26</version>
+        	<version>1.0.27-SNAPSHOT</version>
         	<scope>test</scope>
         	<type>war</type>
         </dependency>
         <dependency>
             <groupId>de.mpg.escidoc.services</groupId>
             <artifactId>syndication_presentation</artifactId>
-            <version>1.0.8</version>
+            <version>1.0.9-SNAPSHOT</version>
             <scope>test</scope>
             <type>war</type>
         </dependency>
         <dependency>
         	<groupId>de.mpg.escidoc.services</groupId>
         	<artifactId>search</artifactId>
-        	<version>1.0.27</version>
+        	<version>1.0.28-SNAPSHOT</version>
             <scope>test</scope>
         	<type>ejb</type>
         </dependency>
         <dependency>
         	<groupId>de.mpg.escidoc.services</groupId>
         	<artifactId>structuredexportmanager</artifactId>
-        	<version>1.0.30</version>
+        	<version>1.0.31-SNAPSHOT</version>
             <scope>test</scope>
         	<type>ejb</type>
         </dependency>
         <dependency>
         	<groupId>de.mpg.escidoc.services</groupId>
         	<artifactId>citationmanager</artifactId>
-        	<version>1.0.33</version>
+        	<version>1.0.34-SNAPSHOT</version>
             <scope>test</scope>
         	<type>ejb</type>
         </dependency>
