--- a/pubman/pubman_logic_ear/pom.xml
+++ b/pubman/pubman_logic_ear/pom.xml
@@ -2,19 +2,19 @@
 	<parent>
 		<artifactId>pubman</artifactId>
 		<groupId>de.mpg.escidoc.pubman</groupId>
-		<version>5.0.6-SNAPSHOT</version>
+		<version>5.0.6</version>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>de.mpg.escidoc.pubman</groupId>
 	<artifactId>pubman_logic_ear</artifactId>
 	<name>pubman_logic_ear</name>
 	<packaging>ear</packaging>
-	<version>5.0.6-SNAPSHOT</version>
+	<version>5.0.6</version>
 
 	<scm>
-		<connection>scm:svn:https://zim02.gwdg.de/repos/pubman/trunk/pubman/pubman_logic_ear</connection>
-		<developerConnection>scm:svn:https://zim02.gwdg.de/repos/pubman/trunk/pubman/pubman_logic_ear</developerConnection>
-		<url>https://zim02.gwdg.de/repos/pubman/</url>
+		<connection>scm:svn:https://zim02.gwdg.de/repos/pubman/tags/pubman-5.0.6/pubman_logic_ear</connection>
+		<developerConnection>scm:svn:https://zim02.gwdg.de/repos/pubman/tags/pubman-5.0.6/pubman_logic_ear</developerConnection>
+		<url>https://zim02.gwdg.de/repos/pubman/tags/pubman-5.0.6</url>
 	</scm>
 
 	<build>
@@ -237,7 +237,7 @@
 		<dependency>
 			<groupId>de.mpg.escidoc.pubman</groupId>
 			<artifactId>pubman_logic</artifactId>
-			<version>5.0.6-SNAPSHOT</version>
+			<version>5.0.6</version>
 			<scope>compile</scope>
 			<type>ejb</type>
 		</dependency>
