--- a/common_services/exportmanager/pom.xml
+++ b/common_services/exportmanager/pom.xml
@@ -2,19 +2,19 @@
 	<parent>
 		<artifactId>common_services</artifactId>
 		<groupId>de.mpg.escidoc.services</groupId>
-		<version>1.0.30</version>
+		<version>1.0.31-SNAPSHOT</version>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>de.mpg.escidoc.services</groupId>
 	<artifactId>exportmanager</artifactId>
     <name>exportmanager</name>
 	<packaging>ejb</packaging>
-	<version>1.0.28</version>
+	<version>1.0.29-SNAPSHOT</version>
 
 	<scm>
-		<connection>scm:svn:https://zim02.gwdg.de/repos/common/tags/common_services-1.0.30/exportmanager</connection>
-		<developerConnection>scm:svn:https://zim02.gwdg.de/repos/common/tags/common_services-1.0.30/exportmanager</developerConnection>
-		<url>https://zim02.gwdg.de/repos/common/tags/common_services-1.0.30</url>
+		<connection>scm:svn:https://zim02.gwdg.de/repos/common/trunk/common_services/exportmanager</connection>
+		<developerConnection>scm:svn:https://zim02.gwdg.de/repos/common/trunk/common_services/exportmanager</developerConnection>
+		<url>https://zim02.gwdg.de/repos/common/</url>
 	</scm>
 
 	<build>
@@ -58,13 +58,13 @@
 		<dependency> 
 			<groupId>de.mpg.escidoc.services</groupId>
 			<artifactId>citationmanager</artifactId>
-			<version>1.0.34</version>
+			<version>1.0.35-SNAPSHOT</version>
 			<scope>compile</scope>
 		</dependency>
 		<dependency> 
 			<groupId>de.mpg.escidoc.services</groupId>
 			<artifactId>structuredexportmanager</artifactId>
-			<version>1.0.31</version>
+			<version>1.0.32-SNAPSHOT</version>
 			<scope>compile</scope>
 		</dependency>
 		<dependency>
