--- a/common_services/foxml_migration/pom.xml
+++ b/common_services/foxml_migration/pom.xml
@@ -2,7 +2,7 @@
   <parent>
     <artifactId>common_services</artifactId>
     <groupId>de.mpg.escidoc.services</groupId>
-    <version>1.0.27-SNAPSHOT</version>
+    <version>1.0.30-SNAPSHOT</version>
   </parent>
   
   <modelVersion>4.0.0</modelVersion>
@@ -21,6 +21,10 @@
     <resources>
 			<resource>
 				<directory>src/main/resources</directory>
+				<filtering>true</filtering>
+			</resource>
+			<resource>
+				<directory>xml</directory>
 				<filtering>true</filtering>
 			</resource>
 		</resources>
@@ -127,12 +131,7 @@
 		<dependency>
 			<groupId>net.sf.saxon</groupId>
 			<artifactId>saxon</artifactId>
-			<version>9.x</version>
-		</dependency>
-		<dependency>
-			<groupId>net.sf.saxon</groupId>
-			<artifactId>saxon-dom</artifactId>
-			<version>9.x</version>
+			<version>9.2</version>
 		</dependency>
 		<dependency>
 			<groupId>xmlbeans</groupId>
