--- a/common_services/dataacquisition/pom.xml
+++ b/common_services/dataacquisition/pom.xml
@@ -2,19 +2,19 @@
 	<parent>
 		<artifactId>common_services</artifactId>
 		<groupId>de.mpg.escidoc.services</groupId>
-		<version>1.0.31</version>
+		<version>1.0.32-SNAPSHOT</version>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>de.mpg.escidoc.services</groupId>
 	<artifactId>dataacquisition</artifactId>
     <name>dataacquisition</name>
 	<packaging>ejb</packaging>
-	<version>1.0.26</version>
+	<version>1.0.27-SNAPSHOT</version>
 
 	<scm>
-		<connection>scm:svn:https://zim02.gwdg.de/repos/common/tags/common_services-1.0.31/dataacquisition</connection>
-		<developerConnection>scm:svn:https://zim02.gwdg.de/repos/common/tags/common_services-1.0.31/dataacquisition</developerConnection>
-		<url>https://zim02.gwdg.de/repos/common/tags/common_services-1.0.31</url>
+		<connection>scm:svn:https://zim02.gwdg.de/repos/common/trunk/common_services/dataacquisition</connection>
+		<developerConnection>scm:svn:https://zim02.gwdg.de/repos/common/trunk/common_services/dataacquisition</developerConnection>
+		<url>https://zim02.gwdg.de/repos/common/</url>
 	</scm>
 
 	<build>
@@ -106,7 +106,7 @@
 		<dependency>
 			<groupId>de.mpg.escidoc.services</groupId>
 			<artifactId>transformation</artifactId>
-			<version>1.0.17</version>
+			<version>1.0.18-SNAPSHOT</version>
 			<scope>compile</scope>
 		</dependency>
 		<dependency>
