--- a/common_services/transformation/pom.xml
+++ b/common_services/transformation/pom.xml
@@ -3,17 +3,17 @@
 	<parent>
 		<artifactId>common_services</artifactId>
 		<groupId>de.mpg.escidoc.services</groupId>
-		<version>1.0.31</version>
+		<version>1.0.32-SNAPSHOT</version>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>de.mpg.escidoc.services</groupId>
 	<artifactId>transformation</artifactId>
 	<name>transformation</name>
-	<version>1.0.17</version>
+	<version>1.0.18-SNAPSHOT</version>
 	<scm>
-	  <connection>scm:svn:https://zim02.gwdg.de/repos/common/tags/common_services-1.0.31/transformation</connection>
-    <developerConnection>scm:svn:https://zim02.gwdg.de/repos/common/tags/common_services-1.0.31/transformation</developerConnection>
-    <url>https://zim02.gwdg.de/repos/common/transformation/tags/common_services-1.0.31/transformation</url>
+	  <connection>scm:svn:https://zim02.gwdg.de/repos/common/trunk/common_services/transformation</connection>
+    <developerConnection>scm:svn:https://zim02.gwdg.de/repos/common/trunk/common_services/transformation</developerConnection>
+    <url>https://zim02.gwdg.de/repos/common/transformation</url>
   </scm>
 	<build>
 		<plugins>
@@ -85,20 +85,20 @@
 		<dependency>
 			<groupId>de.mpg.escidoc.services</groupId>
 			<artifactId>common_logic</artifactId>
-			<version>1.1.29</version>
+			<version>1.1.30-SNAPSHOT</version>
 			<scope>compile</scope>
 			<type>ejb</type>
 		</dependency>
 		<dependency>
 			<groupId>de.mpg.escidoc.services</groupId>
 			<artifactId>citationmanager</artifactId>
-			<version>1.0.35</version>
+			<version>1.0.36-SNAPSHOT</version>
 			<scope>compile</scope>
 		</dependency>
 		<dependency>
 			<groupId>de.mpg.escidoc.services</groupId>
 			<artifactId>structuredexportmanager</artifactId>
-			<version>1.0.32</version>
+			<version>1.0.33-SNAPSHOT</version>
 			<scope>compile</scope>
 		</dependency>
       	<dependency>
